--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
 }
 
 .jumbotron {
-    font-family: 'franklin Gothic Medium',;
+    font-family: 'Major Mono Display', monospace;;
     text-align: center;
     background-color: lavender;
     border-radius: 0;
