--- a/assets/style.css
+++ b/assets/style.css
@@ -8,14 +8,19 @@
     background-color: lavender;
     border-radius: 0;
     border-bottom: 5px solid black;
-    height: 100%;
+    height: 200px;
     width: 100%;
+    padding: 10px;
 }
 
 
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;                   
     align-content: center;
+}
+
+label {
+    font-size: 40px;
 }
 
 i {
@@ -29,8 +34,8 @@ i {
     /* border-bottom-right-radius: 15px; */
     background-color: rgba(223, 202, 223, 0.87);
     color: white;
-    height: 30px;
-    width: 7%;
+    height: 40px;
+    width: 20%;
     font-size: 20px;
 }
 
@@ -41,9 +46,10 @@ i {
 
 .searchBox {
     font-size: 20px;
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
 }
+
 
 .row {
     font: 18px;
@@ -51,15 +57,20 @@ i {
 }
 
 .col-3 {
-    background-color: lightblue;
+    /* background-color: lightblue; */
     font-size: 18px;
     color: rgba(70, 67, 67, 0.925);
-    padding: 0px;
+    padding: 10px;
     
 }
 
 .col-9 {
-    background-color: lightblue;
+    /* background-color: lightblue; */
     font-size: 18px;
     color: rgba(70, 67, 67, 0.925);
 }
+
+.inputValue {
+    width: 100px;
+}
+
