--- a/assets/style.css
+++ b/assets/style.css
@@ -70,6 +70,11 @@ i {
     color: rgba(70, 67, 67, 0.925);
 }
 
+.col-12 {
+    padding: 10px;
+    align-content: right;
+}
+
 .inputValue {
     width: 100px;
 }
