--- a/assets/style.css
+++ b/assets/style.css
@@ -28,12 +28,23 @@ i {
     font-size: 20px;
 }
 
+.saved-city-button {
+    background-color: rgba(43, 177, 179, 0.797);
+    color: white;
+    /* -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: white; */
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.831);
+    margin: 3px;
+    border-radius: 5px;
+}
+
+.search-content {
+    padding: 10px;
+
+}
 
 .searchBtn {
-    /* border-left: 1px solid black; */
-    /* border-top-right-radius: 15px; */
-    /* border-bottom-right-radius: 15px; */
-    background-color: rgba(223, 202, 223, 0.87);
+    
     color: white;
     height: 40px;
     width: 20%;
@@ -41,7 +52,7 @@ i {
 }
 
  .searchHistoryContainer {
-     display: block;
+     display: none;
      justify-content: space-between;
  }
 
@@ -49,20 +60,16 @@ i {
     /* display: flex;
     flex-wrap: wrap; */
     margin-left: 10px;
-    border: solid 2px rgba(223, 202, 223, 0.87);
-    border-radius: 15px;
     padding: 10px;
     width: 100vh;
     height: 50vh;
 }
 
-.searchHistory {
-    padding-top: 10px;
-}
 
 .searchBox {
     font-size: 20px;
     height: 50px;
+    width: 70px;
 }
 
 
@@ -72,51 +79,61 @@ i {
 }
 
 .col-3 {
-    /* background-color: lightblue; */
-    font-size: 18px;
-    color: rgba(70, 67, 67, 0.925);
+    float: left;
+    flex: wrap;
+    width: 30%;
     padding: 10px;
     
 }
 
 .col-9 {
-    /* background-color: lightblue; */
-    font-size: 18px;
-    color: rgba(70, 67, 67, 0.925);
+    width: 40%;
+    float: right;
+    flex: wrap;
+    padding: 10px;
+    margin: 10px;
 }
 
 .col-12 {
     padding: 10px;
-    /* justify-items: space; */
+    
 }
 
-.inputValue {
+#inputValue {
     width: 100px;
 }
 
-.searchHistoryBtn {
-    height: 30px;
-    width: 60px;
-    border: 1px solid;
+#searchBtn {
+    background-color: rgba(43, 177, 179, 0.797);
+    border-radius: 10px;
+    width: 70px
 }
 
 .card-current {
-    width: 75%;
-    justify-content: center;
+    width: 50vh;
+    justify-content: flex;
+    right: 0;
+    align-items: center;
+    background-color: rgba(31, 187, 189, 0.927);
+    color: white;
+    /* text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.831); */
+    border-radius: 15px;
+    box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.831);
+    font-size: 30px;
 }
 
 #fiveDayContainers {
-
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 30px;
 }
 
 #fiveDayContainers >div {
-    background-color: rgb(53, 155, 156);
+    background-color: rgba(31, 187, 189, 0.927);
     color: white;
-    padding: 10px;
+    /* padding: 10px; */
     border-radius: 15px;
+    box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.831);
 }
 
 .forecast-info {
