--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,11 @@ i {
     font-size: 20px;
 }
 
+h4,
+h5 {
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.831);
+}
+
 .saved-city-button {
     background-color: rgba(43, 177, 179, 0.797);
     color: white;
@@ -141,4 +146,35 @@ i {
     margin: 10px;;
 }
 
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+ /* MEDIA QUERY for responsive design */
+ @media only screen and (max-width: 600px) {
+    .input-field .prefix ~ input {
+      width: 80%;
+      width: calc(100% - 3rem);
+    }
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .input-field .prefix ~ input {
+      width: 50%;
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    .row-container .card {
+      width: 100px;
+    }
+  }
+  
+  @media only screen and (max-width: 767px) {
+    .row-container .card {
+      width: 400px;
+    }
+  }
 
