--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,11 @@ body {
    
     font-family: 'Yusei Magic', sans-serif;                   
     align-content: center;
+    background: url("../assets/images/background.jpeg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 label {
@@ -26,11 +31,23 @@ label {
 
 i {
     font-size: 20px;
+
+    text-shadow: 4px 4px 4px rgb(19, 16, 16), -1px 1px 2px #000, 1px -1px 1px #000,
+    -1px -1px 1px #000;
+}
+
+.col-3,
+h2 {
+    color: white;
+    text-shadow: 4px 4px 4px rgb(19, 16, 16), -1px 1px 2px #000, 1px -1px 1px #000,
+    -1px -1px 1px #000;
 }
 
 h4,
 h5 {
-    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.831);
+    text-shadow: 4px 4px 4px rgb(19, 16, 16), -1px 1px 2px #000, 1px -1px 1px #000,
+    -1px -1px 1px #000;
+    font-weight: bold;
 }
 
 .saved-city-button {
@@ -38,7 +55,8 @@ h5 {
     color: white;
     /* -webkit-text-stroke: 1px black;
     -webkit-text-fill-color: white; */
-    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.831);
+    text-shadow: 4px 4px 4px rgb(19, 16, 16), -1px 1px 2px #000, 1px -1px 1px #000,
+    -1px -1px 1px #000;
     margin: 3px;
     border-radius: 5px;
 }
@@ -70,6 +88,9 @@ h5 {
     height: 50vh;
 }
 
+p {
+    color: black;
+}
 
 .searchBox {
     font-size: 20px;
@@ -124,8 +145,8 @@ h5 {
     min-width: 40vh;
     width: 100%;
     align-items: center;
-    background-color: rgba(31, 187, 189, 0.927);
-    color: white;
+    background-color: rgba(167, 211, 213, 0.927);
+    color: rgb(244, 244, 244);
     border-radius: 5px;
     box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.831);
     font-size: 30px;
@@ -142,8 +163,8 @@ h5 {
 }
 
 #fiveDayContainers >div {
-    background-color: rgba(31, 187, 189, 0.927);
-    color: white;
+    background-color: rgba(167, 211, 213, 0.927);
+    color: rgb(255, 255, 255);
     border-radius: 5px;
     box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.831);
 }
